--- a/app/index.html
+++ b/app/index.html
@@ -6,18 +6,7 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  <div class="container">
-      <nav>
-        <a href="#/">Home</a>
-        <a href="#/about">About</a>
-        <a href="#/contact">Contact</a>
-      </nav>
-
-      <section ui-view class="inject">
-       
-      </section>
-    
-  </div>
+  <div ui-view> </div>
   
   <script src="js/main.js"></script>
 </body>
